# VanillaSource

./: .gitignore  build.gradle.kts  settings.gradle.kts
native-rs/: Cargo.toml
native-rs/src/: allocator.rs  lib.rs  pathfinding.rs  registry.rs  utils.rs  world.rs
src/main/java/com/github/bea4dev/vanilla_source/: Console.kt  Main.kt  Resources.kt
src/main/java/com/github/bea4dev/vanilla_source/camera/: Camera.kt
src/main/java/com/github/bea4dev/vanilla_source/commands/: Commands.kt  GamemodeCommand.java  ModelCommand.kt  StopCommand.kt
src/main/java/com/github/bea4dev/vanilla_source/config/: TomlConfig.kt
src/main/java/com/github/bea4dev/vanilla_source/hud/: LinedSidebar.kt
src/main/java/com/github/bea4dev/vanilla_source/lang/: LanguageText.kt  TranslateRenderer.kt
src/main/java/com/github/bea4dev/vanilla_source/logger/: STDOutLogger.kt
src/main/java/com/github/bea4dev/vanilla_source/natives/: LevelIDManager.kt  NativeBridge.java  NativeChunkListener.kt  NativeChunkSender.kt  NativeManager.kt  NativeThreadLocalRegistryManager.kt
src/main/java/com/github/bea4dev/vanilla_source/plugin/: PluginManager.kt  VanillaSourcePlugin.kt
src/main/java/com/github/bea4dev/vanilla_source/resource/: FreezableResource.kt
src/main/java/com/github/bea4dev/vanilla_source/server/: VanillaSource.kt
src/main/resources/: entity_model.toml  log4j2.xml  logback.properties  logback.xml  server.toml
src/main/resources/lang/: ja_JP.toml
src/main/resources/level_entities/: debug_level_entities.toml  debug_level_entities.yml
(+62 files in other folders)
